--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <div class="row button-wrapper">
         <button onclick="clearBoardRandomize()">Clear and Randomize</button>
         <button class="margin-left" onclick="clearBoard(true)">Clear</button>
+        <div class="row">
+            <p class="label">Points: </p><span class="label" style="margin-left: 0.5rem" id="points"></span>
+        </div>
     </div>
     <div id="game">
         <div class="col">
